[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/message.png" type="Texture" id=1]
[ext_resource path="res://ui/MenuLayer.gd" type="Script" id=2]
[ext_resource path="res://fonts/FLAPPYFONT.tres" type="DynamicFont" id=3]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMenu" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="StartMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Sprite" parent="StartMenu/TextureRect"]
position = Vector2( 248.991, 322.488 )
texture = ExtResource( 1 )

[node name="GameOverMenu" type="Node" parent="."]

[node name="OverMenu" type="VBoxContainer" parent="GameOverMenu"]
visible = false
margin_left = 120.776
margin_top = 190.335
margin_right = 374.776
margin_bottom = 393.335
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="GameOverMenu/OverMenu"]
margin_right = 254.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
text = "SCORE:0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="GameOverMenu/OverMenu"]
margin_top = 61.0
margin_right = 254.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
text = "BEST:0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="GameOverMenu/OverMenu"]
margin_top = 122.0
margin_right = 254.0
margin_bottom = 197.0
rect_min_size = Vector2( 0, 75 )
custom_fonts/font = ExtResource( 3 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="GameOverMenu/OverMenu/Restart" to="." method="_on_Restart_pressed"]
